--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Les NFT - Buzz ou Révolution
-description: Veille technologique - Mourtaza ABBASBHAY
+description: Veille technologique - Philippe BERTON
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
