--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Les NFT - Buzz ou Révolution
+title: Datavisualisation et jeux vidéos
 description: Veille technologique - Philippe BERTON
 theme: jekyll-theme-cayman
 github:
